change script package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "deploy:github": "ng deploy --base-href='./' --name='Gutembergue' --email='gmascarenhas3001@gmail.com' --no-silent",
+    "deploy:github": "ng deploy --base-href=./",
+    "deploy:githubCI": "ng deploy --repo=https://github.com/gutembergg/testpwa.git --name=gutembergg --email=gmascarenhas3001@gmail.com",
     "deploy:ftp": "ng build --prod --base-href=/~mascarenhas/testpwa/ && node deploy",
     "test": "ng test",
     "lint": "ng lint",
