--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "deploy:githubCI": "ng deploy --repo=https://github.com/gutembergg/testpwa.git --name=gutembergg --email=gmascarenhas3001@gmail.com --no-silent",
+    "deploy:githubCI": "ng deploy --repo=https://github.com/gutembergg/testPwa.git --name=gutembergg --email=gmascarenhas3001@gmail.com --no-silent",
     "deploy:ftp": "ng build --prod --base-href=/~mascarenhas/testpwa/ && node deploy",
     "test": "ng test",
     "lint": "ng lint",
