--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       # - run: npm test
-      - run: npm run deploy:github --if-present
+      - run: npm run deploy:githubCI --if-present
 
         env:
           CI: true
