--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -28,4 +28,4 @@ jobs:
           CI: true
           # Deploy env
           # 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
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: 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
