--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -23,9 +23,10 @@ jobs:
       - run: npm ci
       # - run: npm test
       - run: npm run deploy:githubCI --if-present
+      - run: echo result ${{ secrets.GH_TOKEN }};
 
         env:
           CI: true
           # Deploy env
           # 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
-          GITHUB_TOKEN: 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
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
